--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,12 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
 
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     //testCompile group: 'junit', name: 'junit', version: '4.12'
 }
